# crng

./: .gitattributes  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  IPO.cmake  Tests.cmake
example/: example_1.cpp  example_2.c
include/crng/: crng.h
src/: crng.c
tests/: test_crng.c
